# workspacecontracts

./: .gitignore  Cargo.toml  Makefile  README.md  note
contracts/ApiError/: Cargo.toml
contracts/ApiError/src/: main.rs
contracts/accessright/: Cargo.toml
contracts/accessright/src/: main.rs
contracts/accessright1/: Cargo.toml
contracts/accessright1/src/: main.rs
contracts/api_error/: Cargo.toml
contracts/api_error/src/: main.rs
contracts/dicofstructvec/: Cargo.toml
contracts/dicofstructvec/src/: main.rs
contracts/dictionaries/: Cargo.toml
contracts/dictionary/: Cargo.toml
contracts/dictionary/src/: main.rs
contracts/dictionarya/: Cargo.toml
contracts/dictionarya/src/: main.rs
contracts/dictofdict/: Cargo.toml
contracts/dictofdict/src/: main.rs
contracts/dictofmaps/: Cargo.toml
contracts/dictofmaps/src/: main.rs
contracts/dictoftuples/: Cargo.toml
contracts/dictoftuples/src/: main.rs
contracts/erc20_balance_of/: Cargo.toml
contracts/erc20_balance_of/src/: main.rs
contracts/gettokenbyindex/: Cargo.toml
contracts/gettokenbyindex/src/: main.rs
contracts/inficltype/: Cargo.toml
contracts/inficltype/src/: main.rs
contracts/listkeys/: Cargo.toml
contracts/listkeys/src/: main.rs
contracts/listofkeys/: Cargo.toml
contracts/listofkeys/src/: main.rs
contracts/listoflists/: Cargo.toml
contracts/listoflists/src/: main.rs
contracts/listofmaps/: Cargo.toml
contracts/listofmaps/src/: main.rs
contracts/listoftuples/: Cargo.toml
contracts/listoftuples/src/: main.rs
contracts/mapofstructvec/: Cargo.toml
contracts/mapofstructvec/src/: main.rs
contracts/multiplemaps/: Cargo.toml
contracts/multiplemaps/src/: main.rs
contracts/multipletuples/: Cargo.toml
contracts/multipletuples/src/: main.rs
contracts/publickeytoaccounthash/: Cargo.toml
contracts/publickeytoaccounthash/src/: main.rs
contracts/remove_key/: Cargo.toml
contracts/remove_key/src/: main.rs
contracts/return_resulttype/: Cargo.toml
contracts/return_resulttype/src/: main.rs
contracts/serialization/: Cargo.toml
contracts/serialization/src/: main.rs
contracts/storebytearray/: Cargo.toml
contracts/storebytearray/src/: main.rs
contracts/storecontract/: Cargo.toml
contracts/storecontract/src/: main.rs
contracts/storelist/: Cargo.toml
contracts/storelist/src/: main.rs
contracts/storelistofcontracts/: Cargo.toml
contracts/storelistofcontracts/src/: main.rs
contracts/storemap/: Cargo.toml
contracts/storemap/src/: main.rs
contracts/storemultiple/: Cargo.toml
contracts/storemultiple/src/: main.rs
contracts/storetuple/: Cargo.toml
contracts/storetuple/src/: main.rs
contracts/struct/: Cargo.toml
contracts/struct/src/: main.rs
contracts/testpackage/: Cargo.toml
contracts/testpackage/src/: main.rs
contracts/uref/: Cargo.toml
contracts/uref/src/: main.rs
contracts/vecofstruct/: Cargo.toml
contracts/vecofstruct/src/: main.rs
ganachedb/: LOG
