[workspace]

members = [
    "contracts/listkeys",
    "contracts/storetuple",
    "contracts/accessright",
    "contracts/accessright1",
    "contracts/api_error",
    "contracts/erc20_balance_of",
    "contracts/listofkeys",
    "contracts/multiplemaps",
    "contracts/multipletuples",
    "contracts/vecofstruct",
    "contracts/mapofstructvec",
    "contracts/remove_key",
    "contracts/return_resulttype",
    "contracts/storelist",
    "contracts/storemap",
    "contracts/uref",
    "contracts/dictionary",
    "contracts/dictionarya",
    "contracts/dictionaries",
    "contracts/testpackage",
    "contracts/storemultiple"]

[profile.release]
lto = true 