[workspace]

members = [
    "contracts/listkeys",
    "contracts/storetuple",
    "contracts/accessright",
    "contracts/accessright1",
    "contracts/api_error",
    "contracts/erc20_balance_of",
    "contracts/listofkeys",
    "contracts/multiplemaps",
    "contracts/multipletuples",
    "contracts/vecofstruct",
    "contracts/struct",
    "contracts/dicofstructvec",
    "contracts/mapofstructvec",
    "contracts/remove_key",
    "contracts/return_resulttype",
    "contracts/storelist",
    "contracts/storemap",
    "contracts/storebytearray",
    "contracts/uref",
    "contracts/dictionary",
    "contracts/dictionarya",
    "contracts/dictionaries",
    "contracts/testpackage",
    "contracts/storemultiple",
    "contracts/inficltype",
    "contracts/listoflists",
    "contracts/listofmaps",
    "contracts/listoftuples",
    "contracts/dictofmaps",
    "contracts/dictoftuples",
    "contracts/dictofdict",
    "contracts/gettokenbyindex",
    "contracts/serialization",
    "contracts/publickeytoaccounthash"]

[profile.release]
lto = true 