[package]
name = "dictionaries"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"

[[bin]]
name = "newdicc"
path = "src/dictionaryc.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "newdica"
path = "src/dictionarya.rs"
test = false
doctest = false
bench = false

