[package]
name = "dictionaries"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "newdicc"
path = "src/dictionaryc.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "newdica"
path = "src/dictionarya.rs"
test = false
doctest = false
bench = false

[profile.release]
codegen-units = 1
lto = true