# [package]
# name = "remove_key"
# version = "0.1.0"
# edition = "2018"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# casper-contract="1.4"
# casper-types="1.5"

# [[bin]]
# name = "remove_key"
# path = "src/main.rs"
# bench = false
# doctest = false
# test = false

# [profile.release]
# codegen-units = 1
# lto = true

[package]
name = "remove_key"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "remove_key"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true


