[package]
name = "serialization"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
serde-json-core = "0.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[[bin]]
name = "serialization"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true