[package]
name = "storemultiple"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4"
casper-types = "1.5"

[[bin]]
name = "storemultiple"
bench = false
test = false
doctest = false

[profile.release]
codegen-units = 1
lto = true