[package]
name = "vecofstruct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract="1.4.3"
casper-types="1.4.6"
casper_types_derive = "0.1.0"

[[bin]]
name = "vecofstruct"
path = "src/main.rs"
bench = false
doctest = false
test = false